--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chatbot</title>
-  <h1>Welcome to Medha Tech</h1>
+  
   <link rel="stylesheet" href="/static/styles.css">
   
 
@@ -15,7 +15,7 @@
 <div class="chatbox-container">
   <div class="chatbox">
     <div class="chatbox-heading">
-        <img src="/static/assets/projectImage.png" alt="Chatbot Image" width="45" height="45">
+        <img src="/static/assets/MalnadImage.png" alt="Chatbot Image" width="100" height="45">
       <h1>Virtual Assistant</h1>
       <div class="refresh-button-container">
         <div class="refresh-button">&#8634;</div>
@@ -31,12 +31,13 @@
       <button id="send-button" class="send-button" >&#11166;</button>
       <div id="chatMessages"></div>
     </div>
-    <div id="currentDateTime" class="timestamp"></div>
+    
   </div>
 </div>
 <script src="/static/script.js"></script>
 
-<img src="/static/assets/messengerIcon4.jpg" alt="Messenger Icon" class="messenger-icon" ">
+
+<img src="/static/assets/chatbotimage.png" alt="Messenger Icon" class="messenger-icon" ">
 
 
 </body>
