--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="chatbox-container">
   <div class="chatbox">
     <div class="chatbox-heading">
-        <img src="/static/assets/MalnadImage.png" alt="Chatbot Image" width="100" height="45">
-      <h1>Virtual Assistant</h1>
+        <img src="/static/assets/Mira_white.png" alt="Chatbot Image" width="100" height="45">
+      <h1>Mira</h1>
       <div class="refresh-button-container">
         <div class="refresh-button">&#8634;</div>
       </div>
@@ -25,6 +25,7 @@
       </div>
     </div>
     <div class="chat-messages" id="chatMessages"></div>
+    
     <div class="input-box">
         
       <input type="text" id="userMessage" name="message" class="user-input" placeholder="Type your message...">
